Fixed links not showing
calling tpMenu in the javascript kept setting the links to display none, removing the function call allows the style to display flex on bigger screens

--- a/home/css/style.css
+++ b/home/css/style.css
@@ -302,8 +302,6 @@
     }
 
     .links {
-        display: flex;
-        flex-direction: row;
         margin-left: 150px;
         padding: 0 25px;
     }
